--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div id="about" class="about">
 
             <div class="about-pic">
-                <img class="about-img" src="/Images/mobile.png" />
+                <img class="about-img" src="Images/mobile.png" />
             </div>
             <div>
                 <h2>About this app</h2>
@@ -121,7 +121,7 @@
 
     <!--Contact-->
     <section id="contact-us" class="contact">
-        <img src="/Images/contact.png" />
+        <img src="Images/contact.png" />
         <div class="contactform">
             <form>
                 <h2>Contact us</h2>
